training-2/auth-sdc-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-sdc
  labels:
    app: auth-sdc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-sdc
  template:
    metadata:
      labels:
        app: auth-sdc
    spec:
      containers:
      - name: auth-sdc
        image: streamsets/datacollector:3.19.0
