training-2/auth-sdc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-sdc-svc
  labels:
    app: auth-sdc-svc
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 18630
    targetPort: 18630
    protocol: TCP
  selector:
    app: auth-sdc
