training-2/auth-sdc-ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: auth-sdc-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host:
    http:
      paths:
      - path: /
        backend:
          serviceName: auth-sdc-svc
          servicePort: 18630
