training-2/auth-sdc-svc-ingress.yaml
apiVersion: 1
kind: List
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: auth-sdc
    namespace: ns1
    labels:
      app: auth-sdc
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: auth-sdc
    template:
      metadata:
        labels:
          app: auth-sdc
      spec:
        containers:
        - name: auth-sdc
          image: streamsets/datacollector:3.19.0
          ports:
          - containerPort: 18630
- apiVersion: v1
  kind: Service
  metadata:
    name: auth-sdc-svc
    namespace: ns1
    labels:
      app: auth-sdc-svc
  spec:
    type: ClusterIP
    ports:
    - name: http
      port: 18630
      targetPort: 18630
      protocol: TCP
    selector:
      app: auth-sdc
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: auth-sdc-ingress
    namespace: ns1
    annotations:
      kubernetes.io/ingress.class: nginx
  spec:
    rules:
    - host:
      http:
        paths:
        - path: /
          backend:
            serviceName: auth-sdc-svc
            servicePort: 18630
